--- a/index.html
+++ b/index.html
@@ -16,8 +16,19 @@ and open the template in the editor.
                 background-color: black;
                 float: left;
             }
-            .stats {
+            .playerStats {
                 float: left;
+                width: 300px;
+                height: 490px;
+                border: 1px black solid;
+                margin: 5px;
+            }
+            .hexStats {
+                float: left;
+                width: 300px;
+                height: 290px;
+                border: 1px black solid;
+                margin: 5px;
             }
             .hex {
                 cursor: pointer;
@@ -26,10 +37,8 @@ and open the template in the editor.
     </head>
     <body>
         <div class="canvas" id="canvas"></div>
-        <div class="stats" id="stats">
-            <div id="playerStats"></div>
-            <div id="hexStats"></div>
-        </div>
+        <div class="playerStats" id="playerStats"></div>
+        <div class="hexStats" id="hexStats"></div>
         
         <script type="text/javascript"  src="jquery-2.1.3.min.js"></script>
 <!--        <script type="text/javascript"  src="mySvg.js"></script>-->
