OOP rules adherence 1

--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@ and open the template in the editor.
         
         <script type="text/javascript"  src="jquery-2.1.3.min.js"></script>
 <!--        <script type="text/javascript"  src="mySvg.js"></script>-->
-        <script type="text/javascript"  src="OOP.mySvg.js"></script>
+        <script type="text/javascript"  src="TowerDefence.js"></script>
     </body>
 </html>
