--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@ and open the template in the editor.
             .hex {
                 cursor: pointer;
             }
+            p {
+                margin: 0;
+            }
         </style>
     </head>
     <body>
