implemented lifeleach + freeze enemy on hit

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ and open the template in the editor.
                 width: 800px;
                 height: 800px;
                 background-color: black;
+/*                background-image: url(images/background.png);
+                background-size: 100%;*/
                 float: left;
             }
             .playerStats {
