--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ and open the template in the editor.
         
         <script type="text/javascript"  src="jquery-2.1.3.min.js"></script>
 <!--        <script type="text/javascript"  src="mySvg.js"></script>-->
-        <script type="text/javascript"  src="TowerDefence.js"></script>
+        <script type="text/javascript"  src="TowerDefenceSmooth.js"></script>
+<!--        <script type="text/javascript"  src="TowerDefenceBumpy.js"></script>-->
     </body>
 </html>
