--- a/index.html
+++ b/index.html
@@ -21,14 +21,21 @@ and open the template in the editor.
             .playerStats {
                 float: left;
                 width: 300px;
-                height: 490px;
+                height: 200px;
+                border: 1px black solid;
+                margin: 5px;
+            }
+            .towerStats {
+                float: left;
+                width: 300px;
+                height: 200px;
                 border: 1px black solid;
                 margin: 5px;
             }
             .hexStats {
                 float: left;
                 width: 300px;
-                height: 290px;
+                height: 200px;
                 border: 1px black solid;
                 margin: 5px;
             }
@@ -41,14 +48,11 @@ and open the template in the editor.
         </style>
     </head>
     <body>
-        <div class="canvas" id="canvas"></div>
-        <div class="playerStats" id="playerStats"></div>
-        <div class="hexStats" id="hexStats"></div>
-        
+        <div id="container"></div>
         <script type="text/javascript"  src="jquery-2.1.3.min.js"></script>
-<!--        <script type="text/javascript"  src="mySvg.js"></script>-->
-<!--        <script type="text/javascript"  src="TowerDefenceSmooth.js"></script>-->
-<!--        <script type="text/javascript"  src="TowerDefenceBumpy.js"></script>-->
-        <script type="text/javascript"  src="TDModule.js"></script>
+        <script type="text/javascript"  src="TowerDefenceModule.js"></script>
+        <script>
+            myGame.init('container');
+        </script>
     </body>
 </html>
