radial control rune buying

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@ and open the template in the editor.
                 cursor: pointer;
             }
 */
+            .button {
+                cursor: pointer;
+            }
             .range0 { background-image: url(images/rune-range0.png); }
             .dam0 { background-image: url(images/rune-dam0.png); }
             .as0 { background-image: url(images/rune-as0.png); }
