--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@ and open the template in the editor.
         <link rel="stylesheet" href="normalize.css">
         <style>
             .container {
-                width: 1210px;
+                width: 1200px;
                 margin: 0 auto;
             }
             .canvas {
                 background-color: black;
-                width: 800px;
+                width: 900px;
+                height: 900px;
 /*                background-image: url(images/background.png);
                 background-size: 100%;*/
                 float: left;
@@ -25,8 +26,7 @@ and open the template in the editor.
             .stats {
                 float: left;
                 width: 300px;
-                border: 1px black solid;
-                margin: 5px;
+                outline: 1px black solid;
             }
             .hex {
                 cursor: pointer;
