added velocity.js + first implementation

--- a/index.html
+++ b/index.html
@@ -107,18 +107,19 @@ and open the template in the editor.
     <body>
         <div class="container" id="container"></div>
         <script type="text/javascript"  src="TowerDefenceModule.js"></script>
+        <script type="text/javascript"  src="velocity.min.js"></script>
         <script>
             var oOptions =  {
                 "health": 100,
-                "mana": 200,
+                "mana": 2000,
                 "range": 200,
                 "dam": 10,
                 "as": 5,
                 "cc": 5,
                 "cd": 50,
-                "skillDam": 1,
-                "skillAs": 0,
-                "skillRange": 0,
+                "skillDam": 4,
+                "skillAs": 4,
+                "skillRange": 4,
                 "skillCc": 0,
                 "skillCd": 0,
                 "skillChain": 0,
