--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ and open the template in the editor.
                 cursor: pointer;
             }
 */
-            .button, .bonus {
+            .button, .bonus, .bonus-slot {
                 cursor: pointer;
             }
             .range0 { background-image: url(images/rune-range0.png); }
@@ -112,7 +112,7 @@ and open the template in the editor.
             var oOptions =  {
                 "health": 100,
                 "mana": 200,
-                "range": 150,
+                "range": 250,
                 "dam": 5,
                 "as": 5,
                 "cc": 5,
