correct CC/CD + possible bg + hex select outline

--- a/index.html
+++ b/index.html
@@ -16,18 +16,16 @@ and open the template in the editor.
                 margin: 0 auto;
             }
             .canvas {
-                background-color: black;
                 width: 900px;
                 height: 900px;
                 float: left;
+                background-image: url(images/bg-lava-1.png);
+                background-size: 100%;
             }
             .stats {
                 float: left;
                 width: 300px;
                 outline: 1px black solid;
-            }
-            .hex {
-                cursor: pointer;
             }
             p {
                 margin: 0;
